service.yaml
apiVersion: v1
kind: Service
metadata:
  name: to-do
spec:
  selector:
    app: getting-started
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
